iginx revert to local service

--- a/.github/workflows/remote-test.yml
+++ b/.github/workflows/remote-test.yml
@@ -65,6 +65,7 @@ jobs:
                   DB-name: ${{ matrix.DB-name }}
                   Set-Filter-Fragment-OFF: "true"
                   Metadata: ${{ matrix.metadata }}
+                  Switch-DB: "true"
 
             - if: runner.os == 'Windows'
               name: Build & Run Client image
