--- a/docker/client/Dockerfile-windows
+++ b/docker/client/Dockerfile-windows
@@ -3,24 +3,30 @@
 #WORKDIR /root/iginx
 #RUN mvn clean package -pl client -am -Dmaven.test.skip=true -P-format -e
 
-FROM jenkins4eval/openjdk:11-jdk-hotspot-windowsservercore-ltsc2019
+FROM mcr.microsoft.com/windows/servercore:ltsc2022
 #COPY --from=builder /root/iginx/client/target/iginx-client-0.6.0-SNAPSHOT/ /iginx_client/
 COPY . C:/iginx
 WORKDIR C:/iginx
 COPY ./target/iginx-client-0.6.0-SNAPSHOT/ C:/iginx_client
 
-SHELL ["powershell", "-Command", "$ErrorActionPreference = 'Stop'; $ProgressPreference = 'SilentlyContinue';"]
+#SHELL ["powershell", "-Command", "$ErrorActionPreference = 'Stop'; $ProgressPreference = 'SilentlyContinue';"]
 
-# 下载 JDK
-ADD https://download.java.net/java/GA/jdk11/9/GPL/openjdk-11.0.2_windows-x64_bin.zip C:/temp/jdk.zip
+# install chocolately package manager
+RUN @powershell -NoProfile -ExecutionPolicy Bypass -Command "iex ((New-Object System.Net.WebClient).DownloadString('https://chocolatey.org/install.ps1'))" && SET "PATH=%PATH%;%ALLUSERSPROFILE%\chocolatey\bin" -Y
 
-# 解压 JDK
-RUN Expand-Archive -Path C:/temp/jdk.zip -DestinationPath C:/jdk; \
-    Remove-Item -Path C:/temp/jdk.zip
+RUN choco install openjdk8 -Y
+RUN refreshenv
 
-# 设置环境变量
-ENV JAVA_HOME C:\\jdk\\jdk-11.0.2
-ENV PATH ${JAVA_HOME}\\bin:${PATH}
+## 下载 JDK
+#ADD https://download.java.net/java/GA/jdk11/9/GPL/openjdk-11.0.2_windows-x64_bin.zip C:/temp/jdk.zip
+#
+## 解压 JDK
+#RUN Expand-Archive -Path C:/temp/jdk.zip -DestinationPath C:/jdk; \
+#    Remove-Item -Path C:/temp/jdk.zip
+#
+## 设置环境变量
+#ENV JAVA_HOME C:\\jdk\\jdk-11.0.2
+#ENV PATH ${JAVA_HOME}\\bin:${PATH}
 
 RUN mkdir C:/iginx_client/logs
 RUN mkdir C:/iginx_client/data
