--- a/docker/client/Dockerfile-windows
+++ b/docker/client/Dockerfile-windows
@@ -27,8 +27,11 @@ RUN refreshenv
 ## 设置环境变量
 #ENV JAVA_HOME C:\\jdk\\jdk-11.0.2
 #ENV PATH ${JAVA_HOME}\\bin:${PATH}
+SHELL ["powershell", "-Command", "$ErrorActionPreference = 'Stop'; $ProgressPreference = 'SilentlyContinue';"]
 
-RUN mkdir C:/iginx_client/logs
-RUN mkdir C:/iginx_client/data
+RUN New-Item -Path 'C:/iginx_client/logs' -ItemType Directory
+
+RUN New-Item -Path 'C:/iginx_client/data' -ItemType Directory
+
 VOLUME C:/iginx_client/logs
 ENTRYPOINT ["cmd", "/c", "ping", "localhost", "-t"]
