--- a/dataSources/relational/src/main/resources/oceanbase-meta.properties
+++ b/dataSources/relational/src/main/resources/oceanbase-meta.properties
@@ -1,19 +1,19 @@
 # 配置MySQL META以供JDBCMeta读取
 
 # 驱动类
-driver_class=com.mysql.cj.jdbc.Driver
+driver_class=com.oceanbase.jdbc.Driver
 # 默认数据库
-default_database=mysql
+default_database=oceanbase
 # 系统数据库，用于过滤
-system_databases=performance_schema,information_schema,sys
+system_databases=test,mysql,information_schema
 # 用于包裹表名和字段名的引号
 quote=`
 # 删除数据库的SQL语句
 drop_database_statement=DROP DATABASE IF EXISTS %s;
 # 在JDBC使用getTables时是否需要加引号
-jdbc_need_quote=true
+jdbc_need_quote=false
 # upsert语句中间部分
-upsert_statement= ON DUPLICATE KEY UPDATE 
+upsert_statement= ON DUPLICATE KEY UPDATE
 # upsert语句后面部分格式
 upsert_conflict_statement= %s = VALUES(%s)
 # 获取数据库列表的SQL语句
@@ -22,8 +22,8 @@ database_query_sql=SELECT SCHEMA_NAME AS datname FROM information_schema.schemat
 is_support_full_join=false
 # filter中正则匹配的符号
 regex_like_symbol=REGEXP
-# jdbc元数据获取是否支持特殊字符识别
-jdbc_support_special_char=true
+# jdbc元数据是否支持特殊字符的识别
+jdbc_support_special_char=false
 
 # 配置MySQL DataTypeTransformer
 TINYINT=IGinX-BOOLEAN
