--- a/.github/workflows/remote-test.yml
+++ b/.github/workflows/remote-test.yml
@@ -99,7 +99,7 @@ jobs:
                   chmod +x "${GITHUB_WORKSPACE}/.github/scripts/test/cli/test_remote_udf_windows.sh"
                   "${GITHUB_WORKSPACE}/.github/scripts/test/cli/test_remote_udf_windows.sh" ${{ matrix.os }}
 
-            - if: runner.os = 'Windows'
+            - if: runner.os != 'Windows'
               name: Register Remote UDFs
               shell: bash
               run: |
