--- a/.github/workflows/standalone-test-pushdown.yml
+++ b/.github/workflows/standalone-test-pushdown.yml
@@ -20,15 +20,16 @@ jobs:
                 python-version: ["3.9"]
                 os: [ubuntu-latest, macos-13, windows-latest]
                 DB-name:
-                    "FileSystem",
-                      "IoTDB12",
-                      "InfluxDB",
-                      "PostgreSQL",
-                      "Redis",
-                      "MongoDB",
-                      "Parquet",
-                      "MySQL"
-                ]
+                    [
+                        "FileSystem",
+                        "IoTDB12",
+                        "InfluxDB",
+                        "PostgreSQL",
+                        "Redis",
+                        "MongoDB",
+                        "Parquet",
+                        "MySQL",
+                    ]
                 metadata: [zookeeper]
         runs-on: ${{ matrix.os }}
         steps:
