--- a/.github/workflows/standalone-test.yml
+++ b/.github/workflows/standalone-test.yml
@@ -19,16 +19,17 @@ jobs:
                 java: [8]
                 python-version: ["3.9"]
                 os: [ubuntu-latest, macos-13, windows-latest]
-                DB-name: [
-                  "FileSystem",
-                  "IoTDB12",
-                  "InfluxDB",
-                  "PostgreSQL",
-                  "Redis",
-                  "MongoDB",
-                  "Parquet",
-                  "MySQL"
-                ]
+                DB-name:
+                    [
+                        "FileSystem",
+                        "IoTDB12",
+                        "InfluxDB",
+                        "PostgreSQL",
+                        "Redis",
+                        "MongoDB",
+                        "Parquet",
+                        "MySQL",
+                    ]
                 metadata: [zookeeper]
         runs-on: ${{ matrix.os }}
         steps:
