--- a/docker/client/Dockerfile-windows
+++ b/docker/client/Dockerfile-windows
@@ -25,24 +25,11 @@ RUN refreshenv
 #    Remove-Item -Path C:/temp/jdk.zip
 #
 ## 设置环境变量
-#ENV JAVA_HOME C:\\jdk\\jdk-11.0.2
-#ENV PATH ${JAVA_HOME}\\bin:${PATH}
+ENV JAVA_HOME C:\ProgramData\chocolatey\lib\openjdk8
+ENV PATH ${JAVA_HOME}\bin:${PATH}
 SHELL ["powershell", "-Command", "$ErrorActionPreference = 'Stop'; $ProgressPreference = 'SilentlyContinue';"]
 
 RUN New-Item -Path 'C:/iginx_client/logs' -ItemType Directory
 
 RUN New-Item -Path 'C:/iginx_client/data' -ItemType Directory
-
-VOLUME C:/iginx_client/logs
-
-# 下载 JDK
-ADD https://download.java.net/java/GA/jdk11/9/GPL/openjdk-11.0.2_windows-x64_bin.zip C:/temp/jdk.zip
-
-# 解压 JDK
-RUN Expand-Archive -Path C:/temp/jdk.zip -DestinationPath C:/jdk; \
-    Remove-Item -Path C:/temp/jdk.zip
-
-# 设置环境变量
-ENV JAVA_HOME C:\\jdk\\jdk-11.0.2
-ENV PATH ${JAVA_HOME}\\bin:${PATH}
 ENTRYPOINT ["cmd", "/c", "ping", "localhost", "-t"]
