--- a/docker/client/Dockerfile-windows
+++ b/docker/client/Dockerfile-windows
@@ -25,11 +25,14 @@ RUN refreshenv
 #    Remove-Item -Path C:/temp/jdk.zip
 #
 ## 设置环境变量
-ENV JAVA_HOME C:\ProgramData\chocolatey\lib\openjdk8
-ENV PATH ${JAVA_HOME}\bin:${PATH}
 SHELL ["powershell", "-Command", "$ErrorActionPreference = 'Stop'; $ProgressPreference = 'SilentlyContinue';"]
 
 RUN New-Item -Path 'C:/iginx_client/logs' -ItemType Directory
-
 RUN New-Item -Path 'C:/iginx_client/data' -ItemType Directory
+
+USER ContainerAdministrator
+ENV JAVA_HOME "C:\ProgramData\chocolatey\lib\openjdk8"
+RUN setx /M PATH "%JAVA_HOME%\bin;%PATH%"
+USER ContainerUser
+
 ENTRYPOINT ["cmd", "/c", "ping", "localhost", "-t"]
