--- a/.github/actions/setup/postgresql/action.yml
+++ b/.github/actions/setup/postgresql/action.yml
@@ -4,15 +4,17 @@ description: "setup postgresql"
 runs:
     using: "composite"
     steps:
-        - if: runner.os != 'Linux'
-          id: base
-          name: Initialize Setup Configuration
-          uses: ./.github/actions/setup/tool
-          with:
-              tool: postgresql
-              version: 15.6-1
+        - if: runner.os == 'Linux'
+          name: Add hosted postgresql bin to PATH
+          shell: bash
+          run: echo "$(pg_config --bindir)" >> $GITHUB_PATH
 
-        - if: runner.os != 'Linux'
+        - if: runner.os == 'Windows'
+          name: Add hosted postgresql bin to PATH
+          shell: bash
+          run: echo "$PGBIN" >> $GITHUB_PATH
+
+        - if: runner.os == 'macOS'
           name: Restore postgresql Cache
           id: restore
           uses: actions/cache/restore@v3
@@ -20,25 +22,23 @@ runs:
               path: ${{ steps.base.outputs.cache-path }}
               key: ${{ steps.base.outputs.cache-key }}
 
-        - if: runner.os != 'Linux'
+        - if: runner.os == 'macOS'
           name: Setup postgresql into Runner Tool Cache
           uses: pbrisbin/setup-tool-action@v2
           with:
               name: postgresql
               version: 15.6-1
-              url: "https://get.enterprisedb.com/{name}/{name}-{version}-{os}-binaries.zip"
+              url: "https://get.enterprisedb.com/{name}/{name}-{version}-osx-binaries.{ext}"
               subdir: "pgsql"
               ext: "zip"
-              os-darwin: osx
-              os-win32: windows-x64
 
-        - if: runner.os != 'Linux'
-          name: Add influxdb HOME to ENV
+        - if: runner.os == 'macOS'
+          name: Add postgresql bin to PATH
           shell: bash
           working-directory: ${{ steps.base.outputs.tool-path }}
-          run: echo "PGHOME=$PWD" >> $GITHUB_ENV
+          run: echo "$PWD/bin" >> $GITHUB_PATH
 
-        - if: runner.os != 'Linux' && steps.restore.outputs.cache-hit != 'true'
+        - if: runner.os == 'macOS' && steps.restore.outputs.cache-hit != 'true'
           name: Save postgresql Cache
           uses: actions/cache/save@v3
           with:
