--- a/.github/workflows/upload-binaries.yml
+++ b/.github/workflows/upload-binaries.yml
@@ -1,74 +1,74 @@
-name: Upload Binaries to Github
-
-on:
-    release:
-        types: [published]
-
-jobs:
-    upload-package:
-        name: Upload to Github Release
-        runs-on: ubuntu-latest
-        permissions:
-            contents: write
-        steps:
-            - uses: actions/checkout@v4
-            - uses: actions/setup-java@v4
-              with:
-                  java-version: "8"
-                  distribution: "temurin"
-                  cache: "maven"
-            - name: package
-              run: |
-                  mvn package \
-                      --batch-mode \
-                      -P release,!format \
-                      -DskipTests=true
-            - name: upload
-              uses: svenstaro/upload-release-action@v2
-              with:
-                  file: "**/*.tar.gz"
-                  file_glob: true
-                  overwrite: true
-    upload-deploy:
-        name: Upload to Github Pages
-        runs-on: ubuntu-latest
-        permissions:
-            pull-requests: write
-            contents: write
-        steps:
-            - uses: actions/checkout@v4
-            - uses: actions/setup-java@v4
-              with:
-                  java-version: "8"
-                  distribution: "temurin"
-                  cache: "maven"
-            - name: checkout pages branch
-              uses: actions/checkout@v4
-              with:
-                  path: pages
-                  ref: pages
-                  fetch-depth: 0
-            - name: deploy
-              run: |
-                  mvn deploy \
-                      --batch-mode \
-                      -P !format \
-                      -DskipTests=true \
-                      -Ddeploy.repo.dir=$(pwd)/pages
-            - name: sync README.md and docs
-              run: |
-                  cp README.md pages/
-                  cp -r docs pages/
-            - name: create pull request
-              uses: peter-evans/create-pull-request@v6
-              with:
-                  path: pages
-                  add-paths: |
-                      maven-repo
-                      maven-snapshot-repo
-                      README.md
-                      docs
-                  branch: release-bot/pages
-                  delete-branch: true
-                  commit-message: "chore(repo): update maven repository"
-                  title: "chore(repo): update maven repository"
+#name: Upload Binaries to Github
+#
+#on:
+#    release:
+#        types: [published]
+#
+#jobs:
+#    upload-package:
+#        name: Upload to Github Release
+#        runs-on: ubuntu-latest
+#        permissions:
+#            contents: write
+#        steps:
+#            - uses: actions/checkout@v4
+#            - uses: actions/setup-java@v4
+#              with:
+#                  java-version: "8"
+#                  distribution: "temurin"
+#                  cache: "maven"
+#            - name: package
+#              run: |
+#                  mvn package \
+#                      --batch-mode \
+#                      -P release,!format \
+#                      -DskipTests=true
+#            - name: upload
+#              uses: svenstaro/upload-release-action@v2
+#              with:
+#                  file: "**/*.tar.gz"
+#                  file_glob: true
+#                  overwrite: true
+#    upload-deploy:
+#        name: Upload to Github Pages
+#        runs-on: ubuntu-latest
+#        permissions:
+#            pull-requests: write
+#            contents: write
+#        steps:
+#            - uses: actions/checkout@v4
+#            - uses: actions/setup-java@v4
+#              with:
+#                  java-version: "8"
+#                  distribution: "temurin"
+#                  cache: "maven"
+#            - name: checkout pages branch
+#              uses: actions/checkout@v4
+#              with:
+#                  path: pages
+#                  ref: pages
+#                  fetch-depth: 0
+#            - name: deploy
+#              run: |
+#                  mvn deploy \
+#                      --batch-mode \
+#                      -P !format \
+#                      -DskipTests=true \
+#                      -Ddeploy.repo.dir=$(pwd)/pages
+#            - name: sync README.md and docs
+#              run: |
+#                  cp README.md pages/
+#                  cp -r docs pages/
+#            - name: create pull request
+#              uses: peter-evans/create-pull-request@v6
+#              with:
+#                  path: pages
+#                  add-paths: |
+#                      maven-repo
+#                      maven-snapshot-repo
+#                      README.md
+#                      docs
+#                  branch: release-bot/pages
+#                  delete-branch: true
+#                  commit-message: "chore(repo): update maven repository"
+#                  title: "chore(repo): update maven repository"
