--- a/.github/workflows/standalone-test.yml
+++ b/.github/workflows/standalone-test.yml
@@ -22,12 +22,12 @@ jobs:
                 DB-name:
                     [
                         "IoTDB12",
-                        "InfluxDB",
-                        "Parquet",
+#                        "InfluxDB",
+#                        "Parquet",
                         "PostgreSQL",
-                        "FileSystem",
-                        "Redis",
-                        "MongoDB",
+#                        "FileSystem",
+#                        "Redis",
+#                        "MongoDB",
                     ]
                 metadata: [zookeeper]
         runs-on: ${{ matrix.os }}
