--- a/docker/client/Dockerfile-windows
+++ b/docker/client/Dockerfile-windows
@@ -22,17 +22,16 @@ RUN refreshenv
 USER ContainerAdministrator
 ENV JAVA_HOME "C:\jdk\jdk-11.0.2"
 RUN setx /M PATH "%JAVA_HOME%\bin;%PATH%"
-USER ContainerUser
 SHELL ["powershell", "-Command", "$ErrorActionPreference = 'Stop'; $ProgressPreference = 'SilentlyContinue';"]
 # 下载 JDK
 ADD https://download.java.net/java/GA/jdk11/9/GPL/openjdk-11.0.2_windows-x64_bin.zip C:/temp/jdk.zip
 
 # 解压 JDK
-RUN Expand-Archive -Path C:/temp/jdk.zip -DestinationPath C:/jdk; \
-    Remove-Item -Path C:/temp/jdk.zip
+RUN Expand-Archive -Path C:/temp/jdk.zip -DestinationPath C:/jdk
 
 RUN New-Item -Path 'C:/iginx_client/logs' -ItemType Directory
 RUN New-Item -Path 'C:/iginx_client/data' -ItemType Directory
+USER ContainerUser
 
 
 ENTRYPOINT ["cmd", "/c", "ping", "localhost", "-t"]
