--- a/.github/workflows/standalone-test.yml
+++ b/.github/workflows/standalone-test.yml
@@ -94,6 +94,7 @@ jobs:
             - name: set client test context
               uses: ./.github/actions/context
               with:
+                  DB-name: ${{ matrix.DB-name }}
                   shell: client-before
 
             # large image export only tested in FileSystem and Parquet
