--- a/.github/actions/service/postgresql/action.yml
+++ b/.github/actions/service/postgresql/action.yml
@@ -57,7 +57,8 @@ runs:
                   --username="${{ inputs.username }}" \
                   --pwfile="${PWFILE}" \
                   --auth="trust" \
-                  --no-instructions 
+                  --no-instructions \
+                  --encoding="UTF8"
 
                 echo "port = ${port}" >> "${PGCONF}"
                 echo "unix_socket_directories = ''" >> "${PGCONF}"
