--- a/conf/config.properties
+++ b/conf/config.properties
@@ -73,8 +73,8 @@ constraintChecker=naive
 physicalOptimizer=naive
 
 # 分片策略
-policyClassName=cn.edu.tsinghua.iginx.policy.naive.ReplicaPolicy
-#policyClassName=cn.edu.tsinghua.iginx.policy.naive.NaivePolicy
+#policyClassName=cn.edu.tsinghua.iginx.policy.replica.ReplicaPolicy
+policyClassName=cn.edu.tsinghua.iginx.policy.naive.NaivePolicy
 #policyClassName=cn.edu.tsinghua.iginx.policy.simple.SimplePolicy
 
 #统计信息收集类
