--- a/.github/actions/edit/action.yml
+++ b/.github/actions/edit/action.yml
@@ -2,7 +2,7 @@ name: "edit"
 description: "use sed to edit files in different platforms"
 inputs:
     paths:
-        description: "file paths delimited by newline and space"
+        description: "file paths delimited by space"
         required: true
     statements:
         description: "sed statements delimited by newline"
@@ -13,11 +13,4 @@ runs:
     steps:
         - name: "edit"
           shell: bash
-          run: |
-              set -e
-              paths=$(echo "${{ inputs.paths }}" | tr '\n' ' ')
-              SEDI="sed -i"
-              if [ "$RUNNER_OS" == "macOS" ]; then
-                SEDI="sed -i ''"
-              fi
-              ${SEDI} -e "${{ inputs.statements }}" $paths
+          run: sed -i"" -e "${{ inputs.statements }}" ${{ inputs.paths }}
