--- a/.github/workflows/remote-test.yml
+++ b/.github/workflows/remote-test.yml
@@ -38,6 +38,7 @@ jobs:
               name: Create Docker Network
               shell: cmd
               run: |
+                ipconfig
                 docker --version
                 docker network create -d nat --attachable --subnet 172.40.0.0/16 docker-cluster-iginx
 
