--- a/.github/workflows/unit-mds.yml
+++ b/.github/workflows/unit-mds.yml
@@ -1,22 +1,26 @@
 name: "Metadata-Service-Test"
 
 on:
-    pull_request:
-        types: [opened, reopened]
-        branches:
-            - main
-
-concurrency:
-    group: ${{ github.workflow }}-${{ github.ref }}
-    cancel-in-progress: true
+    workflow_call:
+        inputs:
+            java-matrix:
+                description: "The java version to run the test on"
+                type: string
+                required: false
+                default: '["8"]'
+            os-matrix:
+                description: "The operating system to run the test on"
+                type: string
+                required: false
+                default: '["ubuntu-latest", "macos-13", "windows-latest"]'
 
 jobs:
     ZK-Test:
         strategy:
             fail-fast: false
             matrix:
-                java: [8]
-                os: [ubuntu-latest, windows-latest, macos-13]
+                java: ${{ fromJSON(inputs.java-matrix) }}
+                os: ${{ fromJSON(inputs.os-matrix) }}
         runs-on: ${{ matrix.os}}
         env:
             STORAGE: zookeeper
@@ -45,10 +49,9 @@ jobs:
     ETCD-Test:
         strategy:
             fail-fast: false
-            max-parallel: 20
             matrix:
-                java: [8]
-                os: [ubuntu-latest, windows-latest, macos-13]
+                java: ${{ fromJSON(inputs.java-matrix) }}
+                os: ${{ fromJSON(inputs.os-matrix) }}
         runs-on: ${{ matrix.os}}
         env:
             STORAGE: etcd
