--- a/.github/workflows/standalone-test.yml
+++ b/.github/workflows/standalone-test.yml
@@ -4,6 +4,8 @@ on:
         types: [opened, reopened]
         branches:
             - main
+    schedule:
+        - cron: "0 0 * * 0" # every Sunday
 env:
     VERSION: 0.6.0-SNAPSHOT
 concurrency:
