--- a/.github/workflows/DB-CE.yml
+++ b/.github/workflows/DB-CE.yml
@@ -24,9 +24,12 @@ jobs:
                 DB-name:
                     [
                         "FileSystem",
+                        "IoTDB12",
                         "InfluxDB",
+                        "PostgreSQL",
                         "Redis",
                         "MongoDB",
+                        "Parquet",
                     ]
                 metadata: [zookeeper]
         runs-on: ${{ matrix.os }}
