--- a/.github/workflows/remote-test.yml
+++ b/.github/workflows/remote-test.yml
@@ -43,6 +43,11 @@ jobs:
                 }
                 Get-NetFirewallProfile
                 Set-NetFirewallProfile -Profile Public -Enabled False
+                echo "############################"
+                Get-NetFirewallRule
+                New-NetFirewallRule -DisplayName "Allow ICMPv4-In" -Protocol ICMPv4 -IcmpType 8 -Action Allow -Direction Inbound
+                New-NetFirewallRule -DisplayName "Allow ICMPv4-Out" -Protocol ICMPv4 -IcmpType 8 -Action Allow -Direction Outbound
+
 
             - name: Run Docker container and test network
               run: |
