--- a/.github/workflows/remote-test.yml
+++ b/.github/workflows/remote-test.yml
@@ -60,7 +60,7 @@ jobs:
 
             - name: Run Docker container and test network
               run: |
-                docker run --name=test-container --network=TransNet -d mcr.microsoft.com/windows/servercore:ltsc2022 ping 8.8.8.8
+                docker run --name=test-container -d mcr.microsoft.com/windows/servercore:ltsc2022 ping 8.8.8.8
                 Start-Sleep -s 10
                 docker logs test-container
 
